# codscape

./: CMakeLists.txt  README.md  player_state.cpp  player_state.hpp
resources/: dialogue.json  game_setup.json
src/: JSON.cpp  JSONValue.cpp  Map.cpp  Map.h  Person.cpp  Person.h  Terrain.h  Vector2.cpp  Vector2.h  dialogue_initiator.cpp  dialogue_initiator.hpp  dialogue_state.cpp  dialogue_state.hpp  dialogue_ui.cpp  dialogue_ui.hpp  game.cpp  game.h  interactable.cpp  interactable.hpp  inventory.cpp  inventory.hpp  inventory_ui.cpp  inventory_ui.hpp  key_event.h  main.cpp  olcSprite.h  player_state_machine.cpp  player_state_machine.hpp  rect_transform.cpp  rect_transform.hpp  registry.cpp  registry.hpp  rex_paint_chars.h  text_input.cpp  text_input.h  util_functions.h
